Wed Mar 23 13:00:32 2005  Will Otte <wotte@dre.vanderbilt.edu>

	* DAnCE/Config_Handlers/Any_Handler.cpp

	Fixed compile errors for VC6.

Wed Mar 23 12:39:43 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/examples/Swapping/Sender/Sender.mpc:

          Added a missing library include.

Wed Mar 23 11:19:32 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/examples/Swapping/Sender/Sender.mpc:
        * DAnCE/examples/Swapping/Sender/Sender_exec_1.cpp:
        * DAnCE/examples/Swapping/Sender/Sender_exec_1.h:
        * DAnCE/examples/Swapping/Sender/Sender_exec_1_export.h:
        * DAnCE/examples/Swapping/Sender/Sender_exec_2.cpp:
        * DAnCE/examples/Swapping/Sender/Sender_exec_2.h:
        * DAnCE/examples/Swapping/Sender/Sender_exec_2_export.h:

          Added new export macros to fix compiler problems in Windows
          builds.

Wed Mar 23 11:41:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/Config_Handlers/Basic_Deployment_Data.hpp:
          Fixed compile errors

Wed Mar 23 11:22:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/Config_Handlers/Basic_Deployment_Data.cpp:
        * DAnCE/Config_Handlers/DP_Handler.cpp:
          Fixed compile errors with Borland

Tue Mar 22 21:21:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/ExecutionManager/Execution_Manager_Impl.h:
          Fixed fuzz error

Tue Mar 22 13:08:32 2005  Will Otte <wotte@dre.vanderbilt.edu>

	* DAnCE/ExecutionManager/Execution_Manager_Impl.h
	* DAnCE/ciao/Swapping_Servant_Home_Impl_Base.h
	* DAnCE/ciao/Swapping_Servant_Home_Impl_T.h
	* DAnCE/examples/Swapping/Sender/Sender_exec_1.h
	* DAnCE/examples/Swapping/Sender/Sender_exec_2.h

	Silence some Fuzz errors.

Tue Mar 22 11:45:57 2005  Will Otte <wotte@dre.vanderbilt.edu>

	* DAnCE/Config_Handlers/ADD_Handler.cpp
	* DAnCE/Config_Handlers/Any_Handler.cpp
	* DAnCE/Config_Handlers/CCD_Handler.cpp
	* DAnCE/Config_Handlers/XSCRT/Elements.hpp
